--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,14 @@
 {
   "presets": [
+    "@babel/preset-react",
     [
       "@babel/preset-env",
       {
-        "loose": true,
-        "modules": false
+        "targets": {
+          "browsers": ["> 1%", "last 2 versions"]
+        }
       }
-    ],
-    "@babel/preset-react"
+    ]
   ],
   "plugins": [
     "@babel/plugin-transform-runtime"
