--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "css-loader": "^2.1.1",
     "csv-loader": "^3.0.2",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "html-withimg-loader": "^0.1.16",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
