--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "zhangwenbin <942623159@qq.com>",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^4.2.6",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
